--- a/modules/raws/client/css/raws.css
+++ b/modules/raws/client/css/raws.css
@@ -1,12 +1,4 @@
-.raws h3 {
-  font-family: 'Karla', sans-serif;
-  font-size: 21px;
-  font-weight: 400;
-  letter-spacing: -.01em;
-  line-height: 48px;
-  margin: 0;
-  margin-bottom: 30px;
-}
+
 
 .raws a {
   color: #888;
@@ -129,6 +121,8 @@
 
 .raws .dimension-placeholder,
 .raws .dimension {
+  width: auto !important;
+  height: 50px !important;
   border-radius: 2px;
   font-size: 14px;
   font-weight: 400;
@@ -147,135 +141,6 @@
 
 .raws .dimension-key {
   margin-right: 3px;
-}
-
-.raws .layout {
-  background-color: #406490;
-  border-radius: 2px;
-  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
-  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
-  cursor: pointer;
-  display: table;
-  height: 120px;
-  margin-bottom: 10px;
-  position: relative;
-  width: 100%;
-}
-
-.raws .layout.selected {
-  background-color: #406490;
-}
-
-.raws .layout-title {
-  color: white;
-  font-family: 'Karla', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-}
-
-.raws .layout-thumb {
-  background-color: #fff;
-  background-position: center;
-  background-size: 180%;
-  border-radius: 2px;
-  bottom: 0;
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-
-.raws .layout.selected .layout-thumb,
-.raws .layout:hover .layout-thumb {
-  opacity: .15;
-  -webkit-transition: opacity .2s ease-in-out;
-  -moz-transition: opacity .2s ease-in-out;
-  -ms-transition: opacity .2s ease-in-out;
-  -o-transition: opacity .2s ease-in-out;
-  transition: opacity .2s ease-in-out;
-}
-
-.raws .layout-inner {
-  border-radius: 2px;
-  bottom: 0;
-  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-  display: -ms-flexbox;      /* TWEENER - IE 10 */
-  display: -o-flexbox;      /* TWEENER - IE 10 */
-  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-  flex-align: center;
-  flex-pack: center;
-  left: 0;
-  margin: 0;
-  opacity: 0;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -ms-box-align: center;
-  -o-box-align: center;
-  box-align: center;
-  -webkit-box-pack: center;
-  -moz-box-pack: center;
-  -ms-box-pack: center;
-  -o-box-pack: center;
-  box-pack: center;
-  -webkit-flex-align: center;
-  -moz-flex-align: center;
-  -ms-flex-align: center;
-  -o-flex-align: center;
-  -webkit-flex-pack: center;
-  -moz-flex-pack: center;
-  -ms-flex-pack: center;
-  -o-flex-pack: center;
-}
-
-.raws .layout.selected .layout-inner,
-.raws .layout:hover .layout-inner {
-  opacity: 1;
-  -webkit-transition: opacity .2s ease-in-out;
-  -moz-transition: opacity .2s ease-in-out;
-  -ms-transition: opacity .2s ease-in-out;
-  -o-transition: opacity .2s ease-in-out;
-  transition: opacity .2s ease-in-out;
-}
-
-.raws .layout.yours {
-  background-color: transparent;
-  border: 2px dashed #ddd;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-
-.raws .layout.yours .layout-thumb {
-  background-color: transparent;
-  font-size: 60px;
-  height: 76px;
-  line-height: 118px;
-  opacity: .1;
-  text-align: center;
-}
-
-/*.raws .layout.yours:hover .layout-thumb {}*/
-
-.raws .dimension-placeholder,
-.raws .dimension {
-  background-color: #406490;
-  border-bottom: 1px solid rgb(0, 0, 0);
-  border-bottom: 1px solid rgba(0, 0, 0, .1);
-  color: #fff;
-  cursor: move;
-}
-
-.raws .layout:hover,
-.raws .ui-draggable-dragging,
-.raws .dimension:hover {
-  opacity: 1;
 }
 
 .raws .dimension-multiple {
@@ -316,6 +181,26 @@
   padding-bottom: 5px;
   text-align: center;
 }
+
+/* GRAPH  */
+
+/*.raws .layout.yours:hover .layout-thumb {}*/
+
+.raws .dimension-placeholder,
+.raws .dimension {
+  background-color: #406490;
+  border-bottom: 1px solid rgb(0, 0, 0);
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  color: #fff;
+  cursor: move;
+}
+
+.raws .layout:hover,
+.raws .ui-draggable-dragging,
+.raws .dimension:hover {
+  opacity: 1;
+}
+
 
 .raws .remove {
   cursor: pointer;
